--- a/avaliacaoccr/.htaccess
+++ b/avaliacaoccr/.htaccess
@@ -6,7 +6,9 @@
 
     # Página de contato
 
-    RewriteRule ^relatorios/?$ index.php?module=relatorios&acao=rel_adm [NC]
+    RewriteRule ^relatorios/?$ ?module=relatorios&acao=rel_adm [NC]
+	
+	RewriteRule ^([0-9]+)/?$ ?module=relatorios&acao=rel_adm&semestre=$1 [NC]
 
     # Página de exibição de um produto
 
