--- a/avaliacaoccr/.htaccess
+++ b/avaliacaoccr/.htaccess
@@ -6,9 +6,11 @@
 
     # Página de contato
 
-    RewriteRule ^enquete/([0-9]+)/?$ ?module=enquetes&acao=enquetes&enq_cod=$1 [NC]
+    RewriteRule ^enquete+-([0-9]+)/?$ ?module=enquetes&acao=enquetes&enq_cod=$0 [NC]
+
+    #RewriteRule ^enquete/?$ ?module=enquetes&acao=enquetes [NC]
 	
-	#RewriteRule ^/?$ ?module=relatorios&acao=rel_adm&semestre=$1 [NC]
+	RewriteRule ^relatorios/?$ ?module=relatorios&acao=rel_adm [NC]
 
     # Página de exibição de um produto
 
