--- a/avaliacaoccr/.htaccess
+++ b/avaliacaoccr/.htaccess
@@ -8,7 +8,7 @@
 
     RewriteRule ^enquete+-([0-9]+)/?$ ?module=enquetes&acao=enquetes&enq_cod=$0 [NC]
 
-    RewriteRule ^process/?$ ?module=enquetes&acao=process [NC]
+    RewriteRule ^process+-([0-9]+)?$ ?module=enquetes&acao=process&enq_cod=$0 [NC]
 
     #RewriteRule ^enquete/?$ ?module=enquetes&acao=enquetes [NC]
 	
