--- a/avaliacaoccr/.htaccess
+++ b/avaliacaoccr/.htaccess
@@ -8,13 +8,16 @@
 
     RewriteRule ^enquete+-([0-9]+)/?$ ?module=enquetes&acao=enquetes&enq_cod=$0 [NC]
 
-    RewriteRule ^process+-([0-9]+)?$ ?module=enquetes&acao=process&enq_cod=$0 [NC]
+    RewriteRule ^process+-([0-9]+)/?$ ?module=enquetes&acao=process&enq_cod=$0 [NC]
 
-    #RewriteRule ^enquete/?$ ?module=enquetes&acao=enquetes [NC]
-	
-	RewriteRule ^relatorios/?$ ?module=relatorios&acao=rel_adm [NC]
+    RewriteRule ^valida_senha+-([0-9]+)/?$ ?module=index&action=valida_senha&enq_cod=$0 [NC]
 
-    # Página de exibição de um produto
+    RewriteRule ^index+-([0-9]+)/?$ ?module=index&enq_cod=$0 [NC]    
+
+    RewriteRule ^logout/?$ ?module=index&acao=logout [NC]   
+
+    RewriteRule ^enquete+-([0-9]+)+-([0-9]+)/?$ ?module=enquetes&acao=enquetes&erro=$0 [NC]
+
 
     #RewriteRule ^produtos/([a-z0-9-]+)/([0-9]+)/?$ /produtos.php?id=$2&nome=$1 [NC]
 
